# gitui

./: CHANGELOG.md  Cargo.toml
git2-testing/src/: lib.rs
src/: app.rs  gitui.rs  main.rs  queue.rs  review.rs  spinner.rs  strings.rs
src/components/: changes.rs  diff.rs  status_tree.rs
src/components/commit_details/: mod.rs
src/keys/: key_list.rs
src/popups/: compare_commits.rs  inspect_commit.rs  mod.rs  review_comment.rs
src/snapshots/: gitui__gitui__tests__app_loading.snap  gitui__gitui__tests__app_loading_finished.snap  gitui__gitui__tests__app_log_tab_showing_one_commit.snap
src/tabs/: mod.rs  review.rs  status.rs
src/ui/: mod.rs  style.rs  syntax_text.rs
